added tags pages

--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ title = "Heartysoft Solutions Limited"
 baseURL = "http://localhost:1313/"
 languageCode = "en"
 theme = "hsft"
+preserveTaxonomyNames = false
 
 [permalinks]
 "blog" = "/ashic/blog/:year/:month/:slug/"
