--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "Heartysoft Solutions Limited"
-baseURL = "http://hsft.co/"
+baseURL = "http://heartysoft.com/"
 languageCode = "en"
 theme = "hsft"
 preserveTaxonomyNames = false
